Animate snake head and accept arrow key presses

--- a/snake.css
+++ b/snake.css
@@ -21,6 +21,12 @@ p {
   margin-top: 1em;
 }
 
+#pause {
+  text-align: center;
+  display: block;
+  margin-bottom: 0.5rem;
+}
+
 #grid {
   border: 1px solid gray;
   width: 800px;
