Add icons and help text

--- a/snake.css
+++ b/snake.css
@@ -14,7 +14,7 @@ h1, p {
 }
 
 h1 {
-  margin-bottom: 1em;
+  margin-bottom: 0.5em;
 }
 
 p {
@@ -55,4 +55,35 @@ p {
 
 .is-snake {
   background: gray;
+}
+
+.food {
+  width: 16px;
+  height: 16px;
+  background: no-repeat center center;
+  background-size: cover;
+  background-image: url("images/food.png");
+}
+
+.head {
+  width: 12px;
+  height: 12px;
+  background: no-repeat center center;
+  background-size: cover;
+}
+
+.l {
+  background-image: url("images/left.png");
+}
+
+.r {
+  background-image: url("images/right.png");
+}
+
+.u {
+  background-image: url("images/up.png");
+}
+
+.d {
+  background-image: url("images/down.png");
 }
